load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix kratos-blog
# gazelle:proto disable
# gazelle:exclude api
gazelle(
    name = "gazelle",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=repos.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable",
    ],
    command = "update-repos",
)

#########################################

load("//:utils.bzl", "publish_service")

repository_name = "tx7do"
repository_version = "latest"
push_container = False

publish_service("user", repository_name, repository_version, push_container)

publish_service("file", repository_name, repository_version, push_container)

publish_service("content", repository_name, repository_version, push_container)

publish_service("comment", repository_name, repository_version, push_container)

publish_service("admin", repository_name, repository_version, push_container)
