workspace(name = "com_github_tx7do_kratos_blog")

load("//:DOWNLOAD.bzl", "download_package")

download_package()

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.19.5")

gazelle_dependencies(go_repository_default_config = "@//:WORKSPACE.bazel")

load("@rules_buf//buf:repositories.bzl", "rules_buf_dependencies", "rules_buf_toolchains")

rules_buf_dependencies()

rules_buf_toolchains()

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

load("@rules_buf//buf:defs.bzl", "buf_dependencies")
