load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pagination_proto",
    srcs = ["pagination.proto"],
    strip_import_prefix = "/api",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "pagination_go_proto",
    importpath = "kratos-blog/gen/api/go/pagination",
    proto = ":pagination_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pagination",
    embed = [":pagination_go_proto"],
    importpath = "kratos-blog/gen/api/go/pagination",
    visibility = ["//visibility:public"],
)
