load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "kratos-cms/pkg/middleware/auth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kratos_kratos_v2//middleware",
        "@com_github_go_kratos_kratos_v2//transport",
        "@com_github_tx7do_kratos_authn_middleware//:middleware",
        "@com_github_tx7do_kratos_authz//engine",
        "@com_github_tx7do_kratos_authz_middleware//:middleware",
    ],
)
