load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "slug",
    srcs = ["slug.go"],
    importpath = "github.com/tx7do/kratos-blog/blog-backend/pkg/util/slug",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gosimple_slug//:slug"],
)

alias(
    name = "go_default_library",
    actual = ":slug",
    visibility = ["//visibility:public"],
)

go_test(
    name = "slug_test",
    srcs = ["slug_test.go"],
    embed = [":slug"],
    deps = [
        "@com_github_gosimple_slug//:slug",
        "@com_github_stretchr_testify//assert",
    ],
)
