load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "slug",
    srcs = ["slug.go"],
    importpath = "kratos-blog/pkg/util/slug",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gosimple_slug//:slug"],
)

go_test(
    name = "slug_test",
    srcs = ["slug_test.go"],
    embed = [":slug"],
    deps = [
        "@com_github_gosimple_slug//:slug",
        "@com_github_stretchr_testify//assert",
    ],
)
