load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stringcase",
    srcs = ["stringcase.go"],
    importpath = "kratos-blog/pkg/util/stringcase",
    visibility = ["//visibility:public"],
)

go_test(
    name = "stringcase_test",
    srcs = ["stringcase_test.go"],
    embed = [":stringcase"],
)
