load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trans",
    srcs = ["trans.go"],
    importpath = "kratos-blog/pkg/util/trans",
    visibility = ["//visibility:public"],
)

go_test(
    name = "trans_test",
    srcs = ["trans_test.go"],
    embed = [":trans"],
    deps = ["@com_github_stretchr_testify//assert"],
)
