load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = [
        "category.proto",
        "link.proto",
        "menu.proto",
        "photo.proto",
        "post.proto",
        "tag.proto",
    ],
    strip_import_prefix = "/api",
    visibility = ["//visibility:public"],
    deps = [
        "//api/pagination:pagination_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "kratos-blog/gen/api/go/content/service/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = ["//api/pagination"],
)

go_library(
    name = "service",
    embed = [":v1_go_proto"],
    importpath = "kratos-blog/gen/api/go/content/service/v1",
    visibility = ["//visibility:public"],
)
