load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mixin",
    srcs = [
        "autoincrement_id.go",
        "operator.go",
        "time.go",
        "uuid_id.go",
    ],
    importpath = "kratos-blog/pkg/util/entgo/mixin",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@io_entgo_contrib//entproto",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//dialect",
        "@io_entgo_ent//schema/field",
        "@io_entgo_ent//schema/index",
        "@io_entgo_ent//schema/mixin",
    ],
)
