load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "attachment.go",
        "category.go",
        "comment.go",
        "init.go",
        "link.go",
        "post.go",
        "tag.go",
        "user.go",
    ],
    importpath = "kratos-cms/app/admin/service/internal/service",
    visibility = ["//app/admin/service:__subpackages__"],
    deps = [
        "//gen/api/go/admin/service/v1:service",
        "//gen/api/go/comment/service/v1:service",
        "//gen/api/go/common/pagination",
        "//gen/api/go/content/service/v1:service",
        "//gen/api/go/file/service/v1:service",
        "//gen/api/go/user/service/v1:service",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//middleware/auth/jwt",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_google_wire//:wire",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
