load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "data",
    srcs = ["data.go"],
    importpath = "kratos-blog/app/admin/service/internal/data",
    visibility = ["//app/admin/service:__subpackages__"],
    deps = [
        "//app/admin/service/internal/conf",
        "//gen/api/go/comment/service/v1:service",
        "//gen/api/go/content/service/v1:service",
        "//gen/api/go/file/service/v1:service",
        "//gen/api/go/user/service/v1:service",
        "//pkg/service",
        "@com_github_go_kratos_kratos_contrib_registry_consul_v2//:consul",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//middleware/recovery",
        "@com_github_go_kratos_kratos_v2//middleware/tracing",
        "@com_github_go_kratos_kratos_v2//registry",
        "@com_github_go_kratos_kratos_v2//transport/grpc",
        "@com_github_go_redis_redis_extra_redisotel_v8//:redisotel",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_google_wire//:wire",
        "@com_github_hashicorp_consul_api//:api",
    ],
)
