load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "init.go",
        "registrar.go",
        "rest.go",
    ],
    importpath = "kratos-blog/app/admin/service/internal/server",
    visibility = ["//app/admin/service:__subpackages__"],
    deps = [
        "//app/admin/service/internal/service",
        "//gen/api/go/admin/service/v1:service",
        "//gen/api/go/common/conf",
        "//pkg/bootstrap",
        "//pkg/middleware/auth",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//middleware/logging",
        "@com_github_go_kratos_kratos_v2//middleware/recovery",
        "@com_github_go_kratos_kratos_v2//middleware/selector",
        "@com_github_go_kratos_kratos_v2//middleware/tracing",
        "@com_github_go_kratos_kratos_v2//registry",
        "@com_github_go_kratos_kratos_v2//transport/http",
        "@com_github_google_wire//:wire",
        "@com_github_gorilla_handlers//:handlers",
        "@com_github_tx7do_kratos_authn_engine_jwt//:jwt",
        "@com_github_tx7do_kratos_authn_middleware//:middleware",
        "@com_github_tx7do_kratos_authz//engine/noop",
        "@com_github_tx7do_kratos_authz_middleware//:middleware",
    ],
)
